correction overflow of img-container and ul of nav bar

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav {
 }
 nav ul {
     display: flex;
-    width: 50%;
+    min-width: 50%;
     justify-content: space-between;
 }
 .header {
@@ -125,5 +125,11 @@ button {
     button {
         min-width: 150px;
         margin: 5px auto;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .img-container img {
+        max-width: 40%;
     }
 }
